@@ -1,275 +1,305 @@
 package com.sysdev.slat.service;
 
-import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.sql.PreparedStatement;
+import java.sql.SQLException;
+import java.util.*;
 
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.junit.jupiter.api.*;
+import org.mockito.*;
+import org.springframework.dao.DataAccessException;
 import org.springframework.dao.EmptyResultDataAccessException;
-import org.springframework.dao.QueryTimeoutException;
-import org.springframework.jdbc.core.BatchPreparedStatementSetter;
-import org.springframework.jdbc.core.JdbcTemplate;
-
+import org.springframework.jdbc.core.*;
 import com.sysdev.slat.GroupDetailDto;
 
-@ExtendWith(MockitoExtension.class)
 class GroupServiceTest {
 
   @Mock
   private JdbcTemplate jdbc;
 
   @InjectMocks
-  private GroupService target;
+  private GroupService service;
 
-  // テスト用定数
-  private final UUID TEST_UUID = UUID.randomUUID();
-  private final String OWNER = "owner-user";
-  private final String MEMBER = "member-user";
+  @BeforeEach
+  void init() {
+    MockitoAnnotations.openMocks(this);
+  }
 
-  // --- 1. validateName ---
-
+  // --------------------------------------------------------
+  // validateName
+  // --------------------------------------------------------
   @Test
-  @DisplayName("validateName: 正常系")
   void testValidateName() {
-    assertTrue(target.validateName("Valid Name"));
-    assertTrue(target.validateName("A"));
+    assertTrue(service.validateName("abc"));
+    assertFalse(service.validateName(""));
+    assertFalse(service.validateName(null));
+    assertTrue(service.validateName("x".repeat(255)));
+    assertFalse(service.validateName("x".repeat(256)));
   }
 
+  // --------------------------------------------------------
+  // createGroup: success no members（batchUpdate が呼ばれない）
+  // --------------------------------------------------------
   @Test
-  @DisplayName("validateName: 異常系 (null, 空文字, 空白, 長すぎ)")
-  void testValidateNameInvalid() {
-    assertFalse(target.validateName(null));
-    assertFalse(target.validateName(""));
-    assertFalse(target.validateName("   "));
+  void testCreateGroup_success_noMembers() {
 
-    String longName = "a".repeat(256);
-    assertFalse(target.validateName(longName));
-  }
+    when(jdbc.update(startsWith("INSERT INTO group_s"), any(), any(), any()))
+        .thenReturn(1);
 
-  // --- 2. createGroup ---
+    when(jdbc.update(startsWith("INSERT INTO group_members"), any(), any()))
+        .thenReturn(1);
 
-  @Test
-  @DisplayName("createGroup: 正常系 (メンバーあり)")
-  void testCreateGroupSuccess() {
-    // 1. Ready
-    List<String> members = List.of(MEMBER, "member2");
-
-    // 2. Do
-    boolean result = target.createGroup(OWNER, "New Group", members);
-
-    // 3. Assert
+    boolean result = service.createGroup("owner", "group1", Collections.emptyList());
     assertTrue(result);
 
-    // SQL呼び出し検証
-    verify(jdbc).update(contains("INSERT INTO group_s"), any(UUID.class), eq("New Group"), eq(OWNER));
-    verify(jdbc).update(contains("INSERT INTO group_members"), any(UUID.class), eq(OWNER));
-    verify(jdbc).batchUpdate(contains("INSERT INTO group_members"), any(BatchPreparedStatementSetter.class));
-  }
+    verify(jdbc).update(contains("INSERT INTO group_s"), any(), eq("group1"), eq("owner"));
+    verify(jdbc).update(contains("INSERT INTO group_members"), any(), eq("owner"));
 
-  @Test
-  @DisplayName("createGroup: 正常系 (メンバーなし)")
-  void testCreateGroupNoMembers() {
-    // 1. Ready
-    List<String> members = Collections.emptyList();
-
-    // 2. Do
-    boolean result = target.createGroup(OWNER, "Solo Group", members);
-
-    // 3. Assert
-    assertTrue(result);
+    // batchUpdate が呼ばれないこと
     verify(jdbc, never()).batchUpdate(anyString(), any(BatchPreparedStatementSetter.class));
   }
 
+  // --------------------------------------------------------
+  // createGroup: success with members
+  // --------------------------------------------------------
   @Test
-  @DisplayName("createGroup: 異常系 (DBエラー発生)")
-  void testCreateGroupDbError() {
-    // 1. Ready
-    doThrow(new QueryTimeoutException("DB Error")).when(jdbc).update(contains("INSERT INTO group_s"), any(), any(),
-        any());
+  void testCreateGroup_success_withMembers() throws Exception {
 
-    // 2. Do
-    boolean result = target.createGroup(OWNER, "Error Group", List.of(MEMBER));
+    when(jdbc.update(startsWith("INSERT INTO group_s"), any(), any(), any()))
+        .thenReturn(1);
 
-    // 3. Assert
+    when(jdbc.update(startsWith("INSERT INTO group_members"), any(), any()))
+        .thenReturn(1);
+
+    // batchUpdate の擬似実行
+    doAnswer(inv -> {
+      BatchPreparedStatementSetter setter = inv.getArgument(1);
+      PreparedStatement ps = mock(PreparedStatement.class);
+      int size = setter.getBatchSize();
+      assertEquals(2, size);
+      for (int i = 0; i < size; i++)
+        setter.setValues(ps, i);
+      return 1;
+    }).when(jdbc).batchUpdate(anyString(), any(BatchPreparedStatementSetter.class));
+
+    boolean result = service.createGroup("owner", "g1", List.of("a", "b", "owner", "b"));
+    assertTrue(result);
+
+    verify(jdbc).batchUpdate(anyString(), any(BatchPreparedStatementSetter.class));
+  }
+
+  // --------------------------------------------------------
+  // createGroup: setValues 内で SQLException → false
+  // --------------------------------------------------------
+  @Test
+  void testCreateGroup_setValues_exception() throws Exception {
+
+    when(jdbc.update(startsWith("INSERT INTO group_s"), any(), any(), any()))
+        .thenReturn(1);
+
+    when(jdbc.update(startsWith("INSERT INTO group_members"), any(), any()))
+        .thenReturn(1);
+
+    // setValues 内で例外を発生させる PreparedStatement
+    PreparedStatement ps = mock(PreparedStatement.class);
+    doThrow(new SQLException("ERR")).when(ps).setObject(anyInt(), any());
+    doThrow(new SQLException("ERR")).when(ps).setString(anyInt(), anyString());
+
+    when(jdbc.batchUpdate(anyString(), any(BatchPreparedStatementSetter.class)))
+        .thenAnswer(inv -> {
+          BatchPreparedStatementSetter setter = inv.getArgument(1);
+          setter.setValues(ps, 0); // 例外発生
+          return 1;
+        });
+
+    boolean result = service.createGroup("owner", "gX", List.of("m1"));
     assertFalse(result);
   }
 
-  // --- 3. getGroupDetail ---
-
+  // --------------------------------------------------------
+  // createGroup: DB error with cause chain（2段階 cause）
+  // --------------------------------------------------------
   @Test
-  @DisplayName("getGroupDetail: 正常系 (データあり)")
-  void testGetGroupDetailFound() {
-    // 1. Ready
-    Map<String, Object> groupMap = Map.of("id", TEST_UUID, "name", "Test Group");
-    List<Map<String, Object>> membersList = List.of(Map.of("user_id", OWNER));
+  void testCreateGroup_dbError_withCauseChain() {
 
-    doReturn(groupMap).when(jdbc).queryForMap(anyString(), eq(TEST_UUID));
-    doReturn(membersList).when(jdbc).queryForList(anyString(), eq(TEST_UUID));
+    Throwable c2 = new RuntimeException("cause2");
+    Throwable c1 = new RuntimeException("cause1", c2);
+    DataAccessException ex = new DataAccessException("top", c1) {
+    };
 
-    // 2. Do
-    GroupDetailDto result = target.getGroupDetail(TEST_UUID);
+    when(jdbc.update(anyString(), any(), any(), any()))
+        .thenThrow(ex);
 
-    // 3. Assert
-    assertNotNull(result);
-    assertEquals(groupMap, result.getGroup());
-    assertEquals(membersList, result.getMembers());
+    boolean result = service.createGroup("owner", "g", List.of("a"));
+    assertFalse(result);
   }
 
+  // --------------------------------------------------------
+  // createGroup: normal DB error
+  // --------------------------------------------------------
   @Test
-  @DisplayName("getGroupDetail: 異常系 (該当なし)")
-  void testGetGroupDetailNotFound() {
-    // 1. Ready
-    doThrow(new EmptyResultDataAccessException(1)).when(jdbc).queryForMap(anyString(), eq(TEST_UUID));
-
-    // 2. Do
-    GroupDetailDto result = target.getGroupDetail(TEST_UUID);
-
-    // 3. Assert
-    assertNull(result);
+  void testCreateGroup_dbError() {
+    when(jdbc.update(anyString(), any(), any(), any()))
+        .thenThrow(mock(DataAccessException.class));
+    assertFalse(service.createGroup("owner", "g", List.of("x")));
   }
 
-  // --- 4. findAllGroupsWithCounts ---
-
+  // --------------------------------------------------------
+  // batchUpdate エラー → false
+  // --------------------------------------------------------
   @Test
-  @DisplayName("findAllGroupsWithCounts: 正常系")
+  void testCreateGroup_batchUpdate_dbError() {
+
+    when(jdbc.update(startsWith("INSERT INTO group_s"), any(), any(), any()))
+        .thenReturn(1);
+
+    when(jdbc.update(startsWith("INSERT INTO group_members"), any(), any()))
+        .thenReturn(1);
+
+    when(jdbc.batchUpdate(anyString(), any(BatchPreparedStatementSetter.class)))
+        .thenThrow(new DataAccessException("batch err") {
+        });
+
+    assertFalse(service.createGroup("owner", "groupX", List.of("a", "b")));
+  }
+
+  // --------------------------------------------------------
+  // getGroupDetail: found
+  // --------------------------------------------------------
+  @Test
+  void testGetGroupDetail_found() {
+    UUID gid = UUID.randomUUID();
+
+    when(jdbc.queryForMap(anyString(), eq(gid)))
+        .thenReturn(Map.of("id", gid, "name", "g"));
+
+    when(jdbc.queryForList(anyString(), eq(gid)))
+        .thenReturn(List.of(Map.of("user_id", "u1")));
+
+    GroupDetailDto dto = service.getGroupDetail(gid);
+    assertNotNull(dto);
+    assertEquals(gid, dto.getGroup().get("id"));
+  }
+
+  // --------------------------------------------------------
+  // getGroupDetail: not found
+  // --------------------------------------------------------
+  @Test
+  void testGetGroupDetail_notFound() {
+    UUID gid = UUID.randomUUID();
+
+    when(jdbc.queryForMap(anyString(), eq(gid)))
+        .thenThrow(new EmptyResultDataAccessException(1));
+
+    assertNull(service.getGroupDetail(gid));
+  }
+
+  // --------------------------------------------------------
+  // findAllGroupsWithCounts
+  // --------------------------------------------------------
+  @Test
   void testFindAllGroupsWithCounts() {
-    // 1. Ready
-    List<Map<String, Object>> expectedList = new ArrayList<>();
-    doReturn(expectedList).when(jdbc).queryForList(anyString());
+    when(jdbc.queryForList(anyString()))
+        .thenReturn(List.of(Map.of("id", 1)));
 
-    // 2. Do
-    List<Map<String, Object>> result = target.findAllGroupsWithCounts();
-
-    // 3. Assert
-    assertSame(expectedList, result);
+    List<Map<String, Object>> result = service.findAllGroupsWithCounts();
+    assertEquals(1, result.size());
   }
 
-  // --- 5. deleteGroup ---
-
+  // --------------------------------------------------------
+  // deleteGroup: success
+  // --------------------------------------------------------
   @Test
-  @DisplayName("deleteGroup: 正常系")
-  void testDeleteGroupSuccess() {
-    // 1. Ready
-    doReturn(5).when(jdbc).update(contains("DELETE FROM group_members"), eq(TEST_UUID));
-    doReturn(1).when(jdbc).update(contains("DELETE FROM group_s"), eq(TEST_UUID));
+  void testDeleteGroup_success() {
+    UUID gid = UUID.randomUUID();
 
-    // 2. Do
-    boolean result = target.deleteGroup(TEST_UUID);
+    when(jdbc.update(startsWith("DELETE FROM group_members"), eq(gid)))
+        .thenReturn(5);
 
-    // 3. Assert
-    assertTrue(result);
+    when(jdbc.update(startsWith("DELETE FROM group_s"), eq(gid)))
+        .thenReturn(1);
+
+    assertTrue(service.deleteGroup(gid));
   }
 
+  // --------------------------------------------------------
+  // deleteGroup: dbError
+  // --------------------------------------------------------
   @Test
-  @DisplayName("deleteGroup: 異常系 (グループが存在しない/削除件数0)")
-  void testDeleteGroupFailZero() {
-    // 1. Ready
-    // 【修正】1回目の削除呼び出し（group_members）に対するスタブを追加
-    doReturn(0).when(jdbc).update(contains("DELETE FROM group_members"), eq(TEST_UUID));
-
-    // 2回目の削除呼び出し（group_s）に対するスタブ
-    doReturn(0).when(jdbc).update(contains("DELETE FROM group_s"), eq(TEST_UUID));
-
-    // 2. Do
-    boolean result = target.deleteGroup(TEST_UUID);
-
-    // 3. Assert
-    assertFalse(result);
+  void testDeleteGroup_dbError() {
+    when(jdbc.update(anyString(), any(UUID.class)))
+        .thenThrow(new DataAccessException("err") {
+        });
+    assertFalse(service.deleteGroup(UUID.randomUUID()));
   }
 
+  // --------------------------------------------------------
+  // deleteGroupMember: success
+  // --------------------------------------------------------
   @Test
-  @DisplayName("deleteGroup: 異常系 (DB例外)")
-  void testDeleteGroupException() {
-    // 1. Ready
-    doThrow(new QueryTimeoutException("Delete Error")).when(jdbc).update(contains("DELETE FROM group_members"),
-        eq(TEST_UUID));
-
-    // 2. Do
-    boolean result = target.deleteGroup(TEST_UUID);
-
-    // 3. Assert
-    assertFalse(result);
+  void testDeleteGroupMember_success() {
+    UUID gid = UUID.randomUUID();
+    when(jdbc.update(anyString(), any(), any()))
+        .thenReturn(1);
+    assertTrue(service.deleteGroupMember(gid, "u1"));
   }
 
-  // --- 6. deleteGroupMember ---
-
+  // --------------------------------------------------------
+  // deleteGroupMember: fail
+  // --------------------------------------------------------
   @Test
-  @DisplayName("deleteGroupMember: 正常系")
-  void testDeleteGroupMemberSuccess() {
-    // 1. Ready
-    doReturn(1).when(jdbc).update(contains("DELETE FROM group_members"), eq(TEST_UUID), eq(MEMBER));
-
-    // 2. Do
-    boolean result = target.deleteGroupMember(TEST_UUID, MEMBER);
-
-    // 3. Assert
-    assertTrue(result);
+  void testDeleteGroupMember_fail() {
+    UUID gid = UUID.randomUUID();
+    when(jdbc.update(anyString(), any(), any()))
+        .thenThrow(mock(DataAccessException.class));
+    assertFalse(service.deleteGroupMember(gid, "u1"));
   }
 
+  // --------------------------------------------------------
+  // addGroupMember: success
+  // --------------------------------------------------------
   @Test
-  @DisplayName("deleteGroupMember: 失敗")
-  void testDeleteGroupMemberFail() {
-    // 1. Ready
-    doReturn(0).when(jdbc).update(contains("DELETE FROM group_members"), eq(TEST_UUID), eq(OWNER));
-
-    // 2. Do
-    boolean result = target.deleteGroupMember(TEST_UUID, OWNER);
-
-    // 3. Assert
-    assertFalse(result);
+  void testAddGroupMember_success() {
+    UUID gid = UUID.randomUUID();
+    when(jdbc.update(anyString(), any(), any()))
+        .thenReturn(1);
+    assertTrue(service.addGroupMember(gid, "u1"));
   }
 
-  // --- 7. addGroupMember ---
-
+  // --------------------------------------------------------
+  // addGroupMember: conflict (inserted=0)
+  // --------------------------------------------------------
   @Test
-  @DisplayName("addGroupMember: 正常系")
-  void testAddGroupMemberSuccess() {
-    // 1. Ready
-    doReturn(1).when(jdbc).update(contains("INSERT INTO group_members"), eq(TEST_UUID), eq(MEMBER));
-
-    // 2. Do
-    boolean result = target.addGroupMember(TEST_UUID, MEMBER);
-
-    // 3. Assert
-    assertTrue(result);
+  void testAddGroupMember_conflict() {
+    UUID gid = UUID.randomUUID();
+    when(jdbc.update(anyString(), any(), any()))
+        .thenReturn(0);
+    assertFalse(service.addGroupMember(gid, "u1"));
   }
 
+  // --------------------------------------------------------
+  // addGroupMember: dbError with cause
+  // --------------------------------------------------------
   @Test
-  @DisplayName("addGroupMember: 失敗 (既に参加済み)")
-  void testAddGroupMemberFail() {
-    // 1. Ready
-    doReturn(0).when(jdbc).update(contains("INSERT INTO group_members"), eq(TEST_UUID), eq(MEMBER));
-
-    // 2. Do
-    boolean result = target.addGroupMember(TEST_UUID, MEMBER);
-
-    // 3. Assert
-    assertFalse(result);
+  void testAddGroupMember_dbError_withCause() {
+    Throwable c1 = new IllegalStateException("L2");
+    DataAccessException ex = new DataAccessException("xyz", c1) {
+    };
+    when(jdbc.update(anyString(), any(), any()))
+        .thenThrow(ex);
+    assertFalse(service.addGroupMember(UUID.randomUUID(), "u1"));
   }
 
+  // --------------------------------------------------------
+  // addGroupMember: normal dbError
+  // --------------------------------------------------------
   @Test
-  @DisplayName("addGroupMember: 異常系 (DB例外)")
-  void testAddGroupMemberException() {
-    // 1. Ready
-    // 【修正】引数のマッチャーを any() ではなく any(Object.class) で明示
-    doThrow(new QueryTimeoutException("Insert Error"))
-        .when(jdbc).update(contains("INSERT INTO group_members"), any(Object.class), any(Object.class));
-
-    // 2. Do
-    boolean result = target.addGroupMember(TEST_UUID, MEMBER);
-
-    // 3. Assert
-    assertFalse(result);
+  void testAddGroupMember_dbError() {
+    when(jdbc.update(anyString(), any(), any()))
+        .thenThrow(mock(DataAccessException.class));
+    assertFalse(service.addGroupMember(UUID.randomUUID(), "u1"));
   }
 }
